[tool.poetry]
name = "anonymouschatbotaiogram3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
sqlalchemy = "^2.0.26"
aiosqlite = "^0.19.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
